force-app/main/default/objects/Log__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments and descriptions on the work represented by this log record</description>
    <inlineHelpText>Comments and descriptions on the work represented by this log record</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>