force-app/main/default/objects/Log__c/fields/Errors__c.field-meta.xml
<CustomField>
    <fullName>Errors__c</fullName>
    <description>Listing of the errors resulting from the operation</description>
    <inlineHelpText>Listing of the errors resulting from the operation</inlineHelpText>
    <label>Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>