force-app/main/default/objects/Log__c/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <description>Text representing the input to the given operation</description>
    <inlineHelpText>Text representing the input to the given operation</inlineHelpText>
    <label>Input</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>