force-app/main/default/objects/Log__c/fields/Output__c.field-meta.xml
<CustomField>
    <fullName>Output__c</fullName>
    <description>Text representing the output (if any) of the given operation</description>
    <inlineHelpText>Text representing the output (if any) of the given operation</inlineHelpText>
    <label>Output</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>