force-app/main/default/objects/Log__c/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <description>A description of the results of running the operation</description>
    <inlineHelpText>A description of the results of running the operation</inlineHelpText>
    <label>Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>