force-app/main/default/objects/Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status set by operation during/after process (e.g., Completed, Cancelled, etc.)</description>
    <inlineHelpText>Status set by operation during/after process (e.g., Completed, Cancelled, etc.)</inlineHelpText>
    <label>Status</label>
    <type>TextArea</type>
</CustomField>