force-app/main/default/objects/Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of operation (to be) performed</description>
    <inlineHelpText>Type of operation (to be) performed</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>